# neuroloop

./: .gitignore  README.md  pyproject.toml
agents/: README.md
src/: run_env_cls.py  run_env_ol.py  utils.py
src/neuroloop/: __init__.py  cli.py  evaluation.py  plots.py  utils.py
src/neuroloop/scripts/: ftsts_closed_loop.py  ftsts_open_loop.py  main.py  run_ftsts_closed_loop.py  run_ftsts_open_loop.py
