[project]
name = "neuroloop"
version = "0.1.0"
description = "Training and evaluation pipeline for Closed-Loop Deep Brain Stimulation RL experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbsenv",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "setuptools<70",
]

[project.scripts]
neuroloop = "neuroloop:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
dbsenv = { path = "../dbsenv", editable = true }
